Implement Local Database and MISP Integration for Long-term Threat Tracking

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "better-sqlite3": "^12.2.0",
     "d3": "^7.9.0",
     "d3-geo": "^3.1.1",
     "framer-motion": "^10.16.4",
